--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,103 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
+/*Productos*/
+.title{
+  font-size: 2rem;
+  padding: 5rem 5rem 0;
+  color: red;
+}
+
+.productos{
+  padding: 5rem 2rem;
+  box-shadow: border-box;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  gap: 3rem 1rem;
+}
+
+.producto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 10px 10px 2px rgb(0,0,0, .2);
+  border: 6px solid transparent;
+  border-radius: 5px;
+}
+.producto:hover{
+  border: 6 px solid red;
+}
+.producto_img img{
+  width: 550px;
+}
+
+.producto_footer{
+  padding: 1rem;
+}
+
+.producto_footer h1{
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.productos_footer p{
+  font-weight: 700;
+  color: red;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.producto_footer .price{
+  font-size: 2rem;
+  color: #1a202c;
+}
+.producto .buttom{
+  width: 100%;
+  height: 45px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 1rem 3rem;
+}
+
+.buttom .btn{
+  border: none;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.button button{
+  background-color: #3033d3;
+  max-width: 25px;
+  width: 100%;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  color:white;
+  font-weight: 600;
+}
+
+.buttom div{
+  background-color: #09a05c;
+  display: grid;
+  align-items: center;
+  margin-left: -2rem;
+  border-radius: 5px;
+}
+
+.buttom div a{
+  color: white;
+  font-weight: 700;
+}
+
+.buttom div a:hover{
+  color: white;
+}
+
+.buttom 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
